# gray-scott-cellular

./: .gitignore  CMakeLists.txt  Example_Simulation.webm  GrayScott_CellDEVS_Report.docx  Makefile  README.md  a-dot.webm  asymm_log.csv  build_sim.sh  grid_config.json  grid_log.csv  requirements_for_visialize.txt  visualize.py  visualize_gate.py
config/: 20_dot_w_grid256_config.json  AbigdotConfig.json  cell_mapConfig.json  conwayConfig.json  conwayVisualization_config.json  conway_config.json  grayScottConfig.json  vegetation_init_101_0.025_config.json  vegetation_init_256_Config.json
cv_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  states.col  visualize  visualize.cpp
include/: grid_sir_cell.hpp  state.hpp
main/: CMakeLists.txt  main.cpp  main_asymm_sir.cpp  main_conway.cpp
main/include/: conwayCell.hpp  conwayState.hpp  conway_cell.hpp  grayScottCell.hpp  grayScottState.hpp  state.hpp  vegetationCell.hpp  vegetationState.hpp
